--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -56,3 +56,7 @@
 [[constraint]]
   name = "github.com/gobuffalo/pop"
   version = "4.3.1"
+
+[[constraint]]
+  name = "github.com/gocraft/dbr"
+  branch = "master"
