--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -60,3 +60,7 @@
 [[constraint]]
   name = "github.com/gocraft/dbr"
   branch = "master"
+
+[[constraint]]
+  name = "github.com/go-pg/pg"
+  version = "6.11.2"
